# aloha

./: .gitignore  CMakeLists.txt  Makefile  flake.nix  run_all_examples.sh  test  test.alo  test_programs.sh
docs/: prototype_grammar.md  statements.md
examples/: test_calculator.alo  test_complex_test.alo  test_exit_code_0.alo  test_if_else.alo  test_recursion.alo  test_string.alo  test_struct.alo  test_unary.alo
sample/: add_to_n.alo  calculator.alo  clean.sh  if_else.alo  input.alo  string_test.alo  struct.alo  test.alo  test_input.alo  type_inference.alo  unary.alo
scripts/: test_programs.sh
src/: ASTVisitor.h  ast.cc  ast.h  ast_visitor.h  cli.cc  codegen.cc  codegen.h  driver.cc  driver.h  file.h  lexer.cc  lexer.h  location.h  main.cc  objgen.cc  objgen.h  parser.cc  parser.h  reader.cc  reader.h  sema.cc  sema.h  semantic_analyzer.cc  semantic_analyzer.h  stdlib.cc  symbolTable.cc  symbolTable.h  symbol_table.cc  symbol_table.h  token.cc  token.h  type.h
src/air/: air.h  builder.cc  builder.h  decl.h  expr.h  printer.cc  printer.h  stmt.h  visitor.h
src/ast/: ast.cc  ast.h  decl.h  operator.cc  operator.h  printer.cc  ty_spec.h  visitor.h
src/codegen/: codegen.cc  codegen.h  objgen.cc  objgen.h
src/compiler/: cli.cc  cli.h  driver.cc  driver.h  module.cc  module.h
src/error/: compiler_error.h  diagnostic.h  diagnostic_engine.h  internal.h  parser_error.h
src/frontend/: lexer.cc  lexer.h  location.h  parser.cc  parser.h  token.cc  token.h
src/modules/: import_resolver.cc  import_resolver.h
src/resolver/: import.cc  import.h
src/sema/: symbol_binder.cc  symbol_binder.h  symbol_table.h  type_resolver.cc  type_resolver.h
src/ty/: ty.cc  ty.h
src/utils/: paths.cc  paths.h
stdlib/: CMakeLists.txt  assert.alo  greetings.alo  io.alo  math.alo  memory.alo  prelude.alo  runtime.c  stdlib.cc  string.alo  vector.alo
stdlib/runtime/: arena.c  io.c  runtime.h  string.c  vector.c
tests/: CMakeLists.txt  test_lexer.cc  test_parser.cc
tests/integration/: error_duplicate_variable.alo  error_undefined_variable.alo  test_arithmetic.alo  test_arrays.alo  test_control_flow.alo  test_functions.alo  test_short_circuit.alo  test_stdlib.alo  test_structs.alo  test_variables.alo
tests/integration/error/: arena_allocation_bad_arena.alo  array_assignment_bad_index.alo  array_assignment_non_array.alo  array_assignment_type_mismatch.alo  assign_immutable.alo  assign_immutable_array_element.alo  assign_immutable_shadow.alo  assign_parameter.alo  break_outside_loop.alo  continue_outside_loop.alo  duplicate_parameter.alo  enum_type_mismatch.alo  enum_unknown_variant.alo  function_call_too_few_args.alo  function_call_too_many_args.alo  import_alias_duplicate.alo  import_alias_private_function.alo  import_private_visibility.alo  logical_non_bool.alo  match_expression_non_exhaustive.alo  match_expression_type_mismatch.alo  match_non_enum.alo  match_non_exhaustive.alo  match_pattern_too_deep.alo  missing_return.alo  missing_return_in_branch.alo  named_struct_duplicate_field.alo  named_struct_missing_field.alo  named_struct_unknown_field.alo  null_infer_type.alo  null_non_reference.alo  opaque_bare_parameter.alo  opaque_bare_return.alo  opaque_bare_struct_field.alo  opaque_bare_variable.alo  opaque_wrong_arena_handle.alo  opaque_wrong_vec_handle.alo  out_of_scope_variable.alo  parser_recovery_multiple_errors.alo  positional_struct_initializer.alo  (+4 more)
tests/integration/fixtures/: visibility_symbols.alo
tests/integration/pass/: arena_allocation.alo  array_assignment.alo  arrays.alo  control_flow.alo  enums.alo  function_call_arguments.alo  functions.alo  import_alias_function.alo  import_public_visibility.alo  loops.alo  match_enums.alo  match_expressions.alo  mutability.alo  opaque_runtime_types.alo  parameter_shadow_mutable_local.alo  public_declarations.alo  reference_fields.alo  references.alo  return_codes.alo  return_paths.alo  scoping.alo  stdlib.alo  string_clone.alo  string_concat.alo  string_equality.alo  string_primitives.alo  struct_initializers.alo  structs.alo  variables.alo  vec_int.alo  vec_string.alo
tests/programs/arithmetic/: test_add.alo  test_add_to_n.alo  test_operators.alo  test_unary.alo
tests/programs/branch/: test_if_else.alo
tests/programs/control_flow/: test_exit_code_1.alo  test_exit_conditional.alo
tests/programs/errors/: error_immutable_struct.alo  error_syntax.alo  error_void_main.alo
tests/programs/exit/: test_exit_code_0.alo  test_exit_code_1.alo  test_exit_conditional.alo
tests/programs/functions/: test_complex_test.alo  test_recursion.alo
tests/programs/import/: error_circular.alo  error_circular_a.alo  error_circular_b.alo  test_import.alo  test_multiple_imports.alo  test_nested_import.alo
tests/programs/io/: test_input.alo
tests/programs/structs/: test_field_order.alo  test_multi_field.alo  test_struct_simple.alo  test_struct_struct.alo
tests/programs/types/: test_string.alo  test_type_inference.alo
tests/programs/types/structs/: test_embedded_struct.alo  test_field_order.alo  test_multi_field.alo  test_multiple_structs.alo
tests/unit/: test_lexer.cc
tests/unit_tests/: test_parser.cc
